--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,3 +3,9 @@
     font-style: normal;
     src: url(../font/Museo_Slab_500.otf);
 }
+
+$MainColor: #66d4f4;
+$SecondaryColor: #42a8f6;
+$TextColor: #494949;
+
+$WhiteColor: #fff;
