--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,14 +18,54 @@ $MainColor: #66d4f4;
 $SecondaryColor: #42a8f6;
 $TextColor: #494949;
 
+$underline-title: #2eb0ec;
+
 $WhiteColor: #fff;
+
+//-----------------------------------------
+
+.first-title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    font-weight: 400;
+    @extend %ff-Roboto;
+
+    .upper-text{
+        font-size: 15px;
+        opacity: 0.7;
+    }
+
+    .name-title{
+        font-size: 24px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+
+        margin: 5px 0px 10px 0px;
+    }
+
+    .underline-title{
+        width: 30px;
+        height: 2px;
+        background-color: $underline-title;
+    }
+}
 
 //-----------------------------------------
 
 body{
 
+    color: $TextColor;
+
     @extend %ff-Raleway;
+
+
     header{ 
+        background-image: url('../img/bg-header.png');
+        background-size: cover;
+
         .nav-head{
             max-width: 1110px;
     
@@ -44,3 +84,5 @@ body{
         }
     }
 }
+
+
