--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
 .first-title .upper-text {
   font-size: 15px;
   opacity: 0.7;
+  text-transform: capitalize;
 }
 .first-title .name-title {
   font-size: 24px;
@@ -41,6 +42,22 @@ body {
   width: 30px;
   height: 2px;
   background-color: #2eb0ec;
+}
+
+.second-title {
+  font-weight: 600;
+}
+.second-title .uptext {
+  font-size: 18px;
+  opacity: 0.4;
+}
+.second-title .name-heading {
+  font-size: 32px;
+  text-transform: capitalize;
+}
+.second-title .subtext {
+  font-weight: 500;
+  font-size: 19px;
 }
 
 body {
