--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,7 @@ $WhiteColor: #fff;
     .upper-text{
         font-size: 15px;
         opacity: 0.7;
+        text-transform: capitalize;
     }
 
     .name-title{
@@ -50,6 +51,25 @@ $WhiteColor: #fff;
         width: 30px;
         height: 2px;
         background-color: $underline-title;
+    }
+}
+
+.second-title{
+    font-weight: 600;
+
+    .uptext{
+        font-size: 18px;
+        opacity: 0.4;
+    }
+
+    .name-heading{
+        font-size: 32px;
+        text-transform: capitalize;
+    }
+
+    .subtext{
+        font-weight: 500;
+        font-size: 19px;
     }
 }
 
