--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,76 +1,9 @@
+@import "gstyle.scss";
+
 @font-face {
     font-family: "Museo";
     font-style: normal;
     src: url(../font/Museo_Slab_500.otf);
-}
-
-%ff-Raleway{
-    font-family: 'Raleway', sans-serif;
-}
-
-%ff-Roboto{
-    font-family: roboto-slab, serif;
-}
-
-//-----------------------------------------
-
-$MainColor: #66d4f4;
-$SecondaryColor: #42a8f6;
-$TextColor: #494949;
-
-$underline-title: #2eb0ec;
-
-$WhiteColor: #fff;
-
-//-----------------------------------------
-
-.first-title{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    font-weight: 400;
-    @extend %ff-Roboto;
-
-    .upper-text{
-        font-size: 15px;
-        opacity: 0.7;
-        text-transform: capitalize;
-    }
-
-    .name-title{
-        font-size: 24px;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-
-        margin: 5px 0px 10px 0px;
-    }
-
-    .underline-title{
-        width: 30px;
-        height: 2px;
-        background-color: $underline-title;
-    }
-}
-
-.second-title{
-    font-weight: 600;
-
-    .uptext{
-        font-size: 18px;
-        opacity: 0.4;
-    }
-
-    .name-heading{
-        font-size: 32px;
-        text-transform: capitalize;
-    }
-
-    .subtext{
-        font-weight: 500;
-        font-size: 19px;
-    }
 }
 
 //-----------------------------------------
