--- a/scss/gstyle.scss
+++ b/scss/gstyle.scss
@@ -25,7 +25,7 @@ $WhiteColor: #fff;
 
 //-------------------------------------------------- Общие стили
 
-.first-title{
+.g-first-title{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,7 +55,7 @@ $WhiteColor: #fff;
     }
 }
 
-.second-title{
+.g-second-title{
     font-weight: 600;
 
     .uptext{
@@ -75,7 +75,7 @@ $WhiteColor: #fff;
 }
 
 
-.line-footer{
+.g-line-footer{
     width: 1170px;
     height: 2px;
     background-color: $line-footer;
