--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,9 +18,11 @@ body{
     header{ 
         background-image: url('../img/bg-header.png');
         background-size: cover;
+        margin: 0px;
 
         .nav-head{
             max-width: 1110px;
+            
     
             .container-fluid{
     
