--- a/css/style.css
+++ b/css/style.css
@@ -72,21 +72,34 @@ body {
   font-style: normal;
   src: url(../font/Museo_Slab_500.otf);
 }
+@media (max-width: 752px) {
+  body header {
+    background-image: url("../img/bg-header-mobile.png");
+    background-size: cover;
+  }
+}
+@media (max-width: 1169px) {
+  body header {
+    background-image: url("../img/bg-header-mobile.png");
+    background-size: cover;
+  }
+}
 body {
   color: #494949;
 }
 body header {
   background-image: url("../img/bg-header.png");
   background-size: cover;
-  margin: 0px;
+  background-repeat: no-repeat;
+  background-color: #42a8f6;
 }
-body header .nav-head {
-  max-width: 1110px;
+body header .container {
+  max-width: 1134px;
 }
-body header .nav-head .container-fluid .nav-list {
+body header .container .nav-head .container-fluid .nav-list {
   text-transform: uppercase;
 }
-body header .underline-header {
+body header .container .underline-header {
   height: 2px;
   background-color: #fff;
   opacity: 0.6;
