--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,5 @@
-body {
-  font-family: "Raleway", sans-serif;
-}
-
 .g-first-title {
-  font-family: roboto-slab, serif;
+  font-family: "roboto-slab", sans-serif;
 }
 
 .g-first-title {
@@ -84,20 +80,19 @@ body {
     background-size: cover;
   }
 }
-body {
-  color: #494949;
-}
 body header {
   background-image: url("../img/bg-header.png");
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: #42a8f6;
 }
 body header .container {
   max-width: 1134px;
 }
-body header .container .nav-head .container-fluid .nav-list {
+body header .container .nav-head .container-fluid .nav-list .navbar-nav .nav-item .nav-link {
   text-transform: uppercase;
+  font-weight: 600;
+  font-size: 17px;
+  color: #fff;
 }
 body header .container .underline-header {
   height: 2px;
