--- a/scss/gstyle.scss
+++ b/scss/gstyle.scss
@@ -4,8 +4,10 @@ $MainColor: #66d4f4;
 $SecondaryColor: #42a8f6;
 $TextColor: #494949;
 
+$bg-btn-header: #4f9edb;
 $bg-underline-title: #2eb0ec;
 $bg-line-footer: #dfdfdf;
+
 
 $WhiteColor: #fff;
 
