--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,9 @@
     background-size: cover;
   }
 }
+body a {
+  text-decoration: none;
+}
 body header {
   background-image: url("../img/bg-header.png");
   background-size: cover;
@@ -87,15 +90,85 @@ body header {
 }
 body header .container {
   max-width: 1134px;
+  position: relative;
+}
+body header .container .nav-head .container-fluid .nav-list .navbar-nav {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 600;
+}
+body header .container .nav-head .container-fluid .nav-list .navbar-nav .nav-item {
+  margin: 0px 12px;
 }
 body header .container .nav-head .container-fluid .nav-list .navbar-nav .nav-item .nav-link {
   text-transform: uppercase;
-  font-weight: 600;
   font-size: 17px;
+  color: #fff;
+}
+body header .container .nav-head .container-fluid .nav-list .navbar-nav .login {
+  display: inline-block;
+  padding: 15px 38px;
+  border-radius: 10px;
+  background-color: #4f9edb;
+  text-transform: uppercase;
   color: #fff;
 }
 body header .container .underline-header {
   height: 2px;
   background-color: #fff;
   opacity: 0.6;
+}
+body header .container .row .contain-header {
+  position: relative;
+  overflow: hidden;
+  color: #fff;
+}
+body header .container .row .contain-header .info-link-header {
+  margin: 22% 0% 7% 0%;
+}
+body header .container .row .contain-header .info-link-header h1 {
+  font-size: 40px;
+  font-weight: 500;
+  font-family: "Museo";
+  text-transform: uppercase;
+  word-spacing: 10px;
+}
+body header .container .row .contain-header .info-link-header p {
+  font-weight: 400;
+  font-size: 28px;
+  margin: 10px 0px 70px 0px;
+}
+body header .container .row .contain-header .info-link-header .group-btn .btn-header {
+  display: inline-block;
+  width: 240px;
+  height: 80px;
+  border-radius: 15px;
+  font-weight: 600;
+  font-size: 20px;
+  text-align: center;
+  padding-top: 24px;
+}
+body header .container .row .contain-header .info-link-header .group-btn .google-btn {
+  background-color: #fff;
+  color: #494949;
+  background-image: url("../img/ico/google-play.png");
+  background-repeat: no-repeat;
+  background-position: 25px;
+  padding-left: 15px;
+  margin-right: 25px;
+  -webkit-box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+}
+body header .container .row .contain-header .info-link-header .group-btn .learn-btn {
+  color: #fff;
+  background-color: #4f9edb;
+}
+body header .container .row .contain-header .image-telephone-header {
+  width: 100vh;
+}
+body header .container .row .contain-header .image-telephone-header img {
+  position: absolute;
+  top: 105px;
+  right: 1px;
 }
