--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ body .main .our-service .list-our-service .list__item .descrp-service {
 }
 body .main .Customization {
   margin-top: 25%;
+  margin-bottom: 5%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -252,4 +253,68 @@ body .main .Customization .text-customization .btn-cstm-section {
   -webkit-box-shadow: 0px 5px 10px rgba(102, 212, 244, 0.6);
           box-shadow: 0px 5px 10px rgba(102, 212, 244, 0.6);
   border-radius: 30px;
+}
+body .main .other-service {
+  max-width: 1110px;
+}
+body .main .other-service .div-other-service {
+  margin-top: 7%;
+}
+body .main .other-service .div-other-service .list-other-service {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 20px auto 20px auto;
+  grid-template-columns: repeat(3, auto);
+  -ms-grid-rows: auto 20px auto;
+  grid-template-rows: repeat(2, auto);
+  grid-gap: 20px;
+}
+body .main .other-service .div-other-service .list-other-service > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+body .main .other-service .div-other-service .list-other-service > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+}
+body .main .other-service .div-other-service .list-other-service > *:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
+}
+body .main .other-service .div-other-service .list-other-service > *:nth-child(4) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+}
+body .main .other-service .div-other-service .list-other-service > *:nth-child(5) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 3;
+}
+body .main .other-service .div-other-service .list-other-service > *:nth-child(6) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 5;
+}
+body .main .other-service .div-other-service .list-other-service .list__item {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 40px auto;
+  grid-template-columns: 40px auto;
+  color: #494949;
+}
+body .main .other-service .div-other-service .list-other-service .list__item img {
+  width: 35px;
+  height: 35px;
+}
+body .main .other-service .div-other-service .list-other-service .list__item div {
+  margin-left: 10px;
+}
+body .main .other-service .div-other-service .list-other-service .list__item .name-service {
+  font-size: 18px;
+  font-weight: 600;
+  text-transform: capitalize;
+  margin: 5px 0px 0px 0px;
+}
+body .main .other-service .div-other-service .list-other-service .list__item .desc-item {
+  font-size: 14px;
+  font-weight: 500;
+  opacity: 0.85;
 }
