--- a/scss/style.scss
+++ b/scss/style.scss
@@ -190,6 +190,7 @@ body{
 
         .Customization{
             margin-top: 25%;
+            margin-bottom: 5%;
             display: flex;
             position: relative;
 
@@ -238,6 +239,51 @@ body{
                     
 
                     border-radius: 30px;
+                }
+            }
+        }
+
+        .other-service{
+            max-width: 1110px;
+
+            .div-other-service{
+
+                margin-top: 7%;
+                .list-other-service{
+                    display: grid;
+                    grid-template-columns: repeat(3, auto);
+                    grid-template-rows: repeat(2, auto);
+                    grid-gap: 20px;
+                    
+
+                    .list__item{
+                        display: grid;
+                        grid-template-columns: 40px auto;
+                        color: $TextColor;
+
+                        img{
+                            width: 35px;
+                            height: 35px;
+                        }
+
+                        div{
+                            margin-left: 10px;
+                        }
+
+                        .name-service{
+                            font-size: 18px;
+                            font-weight: 600;
+                            text-transform: capitalize;
+                            margin: 5px 0px 0px 0px;
+
+                        }
+
+                        .desc-item{
+                            font-size: 14px;
+                            font-weight: 500;
+                            opacity: 0.85;
+                        }
+                    }
                 }
             }
         }
